# enablement-bootcamp-config

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: check-pr.yml  ci.yaml.example  deploy-bootstrap-cli.yaml  deploy-extpipes-cli.yaml  deploy-tranformations.yml
config/bootstrap/: bootstrap-cli-config.yml
config/extpipes/: extpipes-cli-config.yml
config/transformations/assets_transform_sample/: manifest.yaml  my_transformation.sql  transformation.sql
config/transformations/raw_assets_infor/: manifest.yaml
config/transformations/raw_assets_sap/: manifest.yaml
config/transformations/raw_datapoints_insert/: manifest.yaml
config/transformations/raw_ts_entity_matching/: manifest.yaml
config/transformations/raw_ts_oee/: manifest.yaml
