[tool.poetry]
name = "enablement-bootcamp-config"
version = "0.1.0"
description = ""
authors = ["Angela Dang Atkinson <angela.atkinson@cognite.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pre-commit = "^2.21.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
